--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,64 +14,22 @@
   </head>
   <body>
     <div class="ui raised very padded text container segment" id="background">
-    <div class="ui container" id="profile-container">
       <h1>MyShareManager</h1>
+      <div class="user-container" id="profile-container">
+      <div class="ui cards">
+      <div class = 'user-container'>
+    <div class="ui container">
 
     <!-- User Profile Cards -->
-      <div class="ui cards">
+
   <div class="card" id ="family-cards">
-    <div class="content">
-      <img class="right floated mini ui image" src="./images/Bill_Decker.png">
-      <div class="header">
-        Bill Decker
-      </div>
-      <div class="meta">
-        User: 24681012
-      </div>
-    </div>
-    <div class="extra content">
-      <div class="ui two buttons">
-        <div class="ui basic black button">View</div>
-        <div class="ui basic red button">Remove User</div>
-      </div>
-    </div>
-  </div>
-  <div class="card" id ="family-cards">
-    <div class="content">
-      <img class="right floated mini ui image" src="./images/Myra_Decker.png">
-      <div class="header">
-        Anne Decker
-      </div>
-      <div class="meta">
-        User: 24681013
-      </div>
-    </div>
-    <div class="extra content">
-      <div class="ui two buttons">
-        <div class="ui basic black button">View</div>
-        <div class="ui basic red button">Remove User</div>
-      </div>
-    </div>
-  </div>
-  <div class="card" id ="family-cards">
-    <div class="content">
-      <img class="right floated mini ui image" src="./images/John_Decker.png">
-      <div class="header">
-        John Decker
-      </div>
-      <div class="meta">
-        User: 24681015
-      </div>
-    </div>
-    <div class="extra content">
-      <div class="ui two buttons">
-        <div class="ui basic black button">View</div>
-        <div class="ui basic red button">Remove User</div>
-      </div>
-    </div>
   </div>
       </div>
     </div>
+  </div>
+  <br>
+    <input class="positive ui button" type="submit" id="save" value="Add User">
+</div>
     <br>
 
     <h4 class="ui horizontal divider header">
@@ -103,6 +61,7 @@
     </div>
     <div class="column">
       <div class="ui cards" id="portfolio-container">
+        <h4>Total Value: </h4>
       </div>
     </div>
   </div>
@@ -114,6 +73,5 @@
         <i class="chart line icon"></i>
          Performance View
       </h4>
-      </div>
   </body>
 </html>
