--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,71 +7,70 @@
     <script src="js/bundle.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="./main.css">
-
     <title>Shares</title>
-
-
   </head>
+
   <body>
-    <div class="ui raised very padded text container segment" id="background">
+    <div class="ui container segment" id="background">
       <h1>MyShareManager</h1>
-      <div class="user-container" id="profile-container">
-      <div class="ui cards">
-      <div class = 'user-container'>
-    <div class="ui container">
 
-    <!-- User Profile Cards -->
+<div class="ui segment" class = "view-background">
+  <div class = "view-background">
+  <div class="ui two column very relaxed grid">
+<!-- User Profile Cards -->
+    <div class="column">
+      <div class = "view-background">
+    <div class="ui container" id="profile-container">
+    <div class="ui cards">
+    <div class = 'user-container'>
+      <div class="ui fluid container">
 
-  <div class="card" id ="family-cards">
-  </div>
+        <div class="card" id ="family-cards">
+        </div>
       </div>
     </div>
+
+    <br>
+      <input class="positive ui button" type="submit" id="save" value="Add User">
+    </div>
+    </div>
+  </div>
+    </div>
+
+    <!-- PORTFOLIO CARDS -->
+      <div class="column">
+        <div class = "view-background">
+        <div class="ui container" id="portfolio-container">
+          <div class="ui cards">
+            <div class="card" id ="portfolio-cards">
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
   </div>
   <br>
-    <input class="positive ui button" type="submit" id="save" value="Add User">
-</div>
-    <br>
 
-    <h4 class="ui horizontal divider header">
-        <i class="folder open outline icon"></i>
-         My Portfolio
-      </h4>
+<!-- ADD FORM -->
 
+    <form class="ui form">
+        <div class="two fields">
 
+          <div class="field">
+          <label for="company search">Company Search:  </label>
+          <select id="company-list" class="ui dropdown">
+          </select>
+          </div>
 
-<div class="ui segment">
-  <div class="ui two column very relaxed grid">
-    <div class="column" id="add-shares-form">
-      <div>
-        <div class="field">
-        <label for="company search">Company Search:  </label>
-        <select id="company-list" class="ui dropdown">
-        </select>
+          <div class="field">
+          <label for="quantity">Quantity of Shares:</label>
+          <input class="ui huge icon input" type="number" id="quantity" step="50"/>
+          </div>
+
         </div>
-      </div>
-      <br>
-      <div>
-        <div class="field">
-        <label for="quantity">Quantity of Shares:</label>
-        <input class="ui huge icon input" type="number" id="quantity" step="50"/>
+             <input class="positive ui button" type="submit" id="save" value="Add Shares">
+           </div>
         </div>
-      </div>
-      <br>
-        <input class="positive ui button" type="submit" id="save" value="Add Shares">
-    </div>
-    <div class="column">
-      <div class="ui cards" id="portfolio-container">
-        <h4>Total Value: </h4>
-      </div>
-    </div>
-  </div>
-  <div class="ui vertical divider">
-    </div>
-    </div>
-
-    <h4 class="ui horizontal divider header">
-        <i class="chart line icon"></i>
-         Performance View
-      </h4>
+      </form>
   </body>
 </html>
