demo app completed

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,31 +14,29 @@
     <div class="ui container segment" id="background">
       <h1>My<span>Share</span>Manager</h1>
 
-<div class="ui segment" class = "view-background">
-  <div class = "view-background">
-  <div class="ui two column very relaxed grid">
-<!-- User Profile Cards -->
-    <div class="column">
+    <div class="ui segment" class = "view-background">
       <div class = "view-background">
-    <div class="ui container" id="profile-container">
-    <div class="ui cards">
-    <div class = 'user-container'>
-      <div class="ui fluid container">
-
-        <div class="card" id ="family-cards">
+       <div class="ui two column very relaxed grid">
+         
+    <!-- User Profile Cards -->
+        <div class="column">
+         <div class = "view-background">
+         <div class="ui container" id="profile-container">
+           <div class="ui cards">
+           <div class = 'user-container'>
+           <div class="ui fluid container">
+           <div class="card" id ="family-cards">
+          </div>
+          </div>
+          </div><br>
+            <input class="positive ui button" type="submit" id="save" value="Add User">
+          </div>
+         </div>
         </div>
-      </div>
-    </div>
-
-    <br>
-      <input class="positive ui button" type="submit" id="save" value="Add User">
-    </div>
-    </div>
-  </div>
-    </div>
+       </div>
 
     <!-- PORTFOLIO CARDS -->
-      <div class="column">
+       <div class="column">
         <div class = "view-background">
         <div class="ui container" id="portfolio-container">
           <div class="ui cards">
@@ -46,31 +44,26 @@
             </div>
           </div>
         </div>
-      </div>
-      </div>
-  </div>
-  <br>
-  <div class="ui horizontal divider">
-      Company Catalogue
-      <i class="search icon"></i>
-    </div>
-
-
-<!-- ADD FORM -->
-
-    <form class="ui form">
-        <div class="two fields">
-
-          <div class="field">
-          <label for="company search">Company Search:  </label>
-          <select id="company-list" class="ui dropdown">
-          </select>
-          </div>
-
         </div>
-            <div class = "ui container" id = "market-container">
-           </div>
+       </div>
+      </div><br>
+      <div class="ui horizontal divider">
+        Company Catalogue
+        <i class="search icon"></i>
+      </div>
+
+    <!-- ADD FORM -->
+      <form class="ui form">
+        <div class="two fields">
+          <div class="field">
+            <label for="company search">Company Search:  </label>
+              <select id="company-list" class="ui dropdown">
+              </select>
+          </div>
+        </div>
+        <div class = "ui container" id = "market-container">
         </div>
       </form>
+    </div>
   </body>
 </html>
